--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
     "php": ">=5.5.0",
     "ext-curl": "*"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^6.3.0"
+  },
   "autoload": {
     "psr-4": {
       "pxgamer\\Splas\\": "src/"
