--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,22 @@
         "ext-curl": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.3.0"
+        "phpunit/phpunit": "^6.3.0",
+        "squizlabs/php_codesniffer": "^3.1"
     },
     "autoload": {
         "psr-4": {
-            "pxgamer\\Splas\\": "src/"
+            "pxgamer\\Splas\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "pxgamer\\Splas\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
     }
 }
