--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "ext-curl": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.3.0",
+        "phpunit/phpunit": "^6.0 || ^7.0",
         "squizlabs/php_codesniffer": "^3.1"
     },
     "autoload": {
