--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "A simple PHP wrapper for utilising the Unsplash api.",
     "license": "MIT",
     "require": {
-        "php": ">=7.1.0",
+        "php": "^7.1",
         "ext-curl": "*"
     },
     "require-dev": {
