--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0 || ^7.0",
+        "phpunit/phpunit": "^6.0 || ^7.0 || ^ 8.0",
         "squizlabs/php_codesniffer": "^3.1"
     },
     "autoload": {
